# hfaudit

./: .gitignore  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  LICENSE  README.md  RESPONSIBLE_DISCLOSURE.md  SECURITY.md
scanner/: .gitignore  pyproject.toml
scanner/hfaudit/: cli.py  scanner.py
scanner/hfaudit/detectors/: base.py  keras_detector.py  pickle_detector.py  savedmodel_detector.py  tf_op_allowlist.py
scanner/hfaudit/fetchers/: __init__.py  exceptions.py  hf_fetcher.py
scanner/hfaudit/parsers/: base.py  keras_parser.py  pickle_parser.py  savedmodel_parser.py
scanner/hfaudit/reporting/: __init__.py  finding.py  persistence.py
scanner/hfaudit/sandbox/: __init__.py  (+4 more)
scanner/rules/: keras-custom-objects.yaml  keras-lambda-dangerous-imports.yaml  keras-lambda-layer.yaml  keras-lambda-network-code.yaml  keras-lambda-obfuscation.yaml  pickle-builtins-exec.yaml  pickle-dangerous-reduce.yaml  pickle-filesystem-write.yaml  pickle-getattr-chain.yaml  pickle-nested-payload.yaml  pickle-network-imports.yaml  pickle-network-strings.yaml  pickle-reverse-shell.yaml  pickle-system-imports.yaml  pickle-unusual-global.yaml  savedmodel-filesystem-ops.yaml  savedmodel-network-ops.yaml  savedmodel-op-allowlist.yaml  savedmodel-printv2-chain.yaml  savedmodel-process-exec.yaml  savedmodel-py-function.yaml
scanner/tests/: test_account_signals.py  test_fetcher.py  test_finding.py  test_keras_detector.py  test_persistence.py  test_pickle_detector.py  test_sandbox.py  test_savedmodel_detector.py  test_scanner.py  test_scorer.py  test_trigger.py  test_typosquatting.py
(+28 files in other folders)
